assets/style/style.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body{
  font-family: Arial, Helvetica, sans-serif;
}

.show{
  display:none
}

img{
  max-width: 100%;
}
a{
  text-decoration: none;
  color: white;
  padding: 20px;
}
a:hover{
  color: white;
}
li{
  list-style: none;
}

h2{
  color: white;
  padding: 10px 10px;
}
h3{
  color: white;
  text-align: center;
  font-size: 0.9rem;
  margin-bottom: 5px;
}
h4{
  color: #797c80;
  font-size: 0.9rem;
  padding: 10px;
}
.col h4{
  text-align: center;
}

/*debug*/
.debug{
  background-color: rgba(144, 238, 144, .3) ;
  border: 1px solid red;
}
.d-box{
  min-height: 20px;
  background-color: rgba(255, 0, 0, .3);
  padding: 20px 40px;
  border: 1px solid green;
}
/*debug*/
/******************layout*******************/



main{
  height: calc(100vh - 90px);
}

footer {
  height: 90px;
}

/*sidebar-layout*/
main .sidebar .header.hide{
  height: 350px;
  width: 230px;
}
main .sidebar{
  
  height: 100%;
}
main .sidebar .main.hide{
  height:calc(100% - 440px) ;
  overflow: auto;
}
main .sidebar .footer{
  height: 90px;
}

/*main-section-layout*/

main .main-section{
  width: 100%;
  overflow: auto;
}
/******************layout*******************/
/*btn*/
.btn{
  text-transform: uppercase;
  padding: 10px 20px;
  border: 1px solid white;
  border-radius: 20px;
}
.btn:hover{
  border: 2px solid white;

}

/******************utility*******************/
.d-flex{
  display: flex;
}
.row{
  display: flex;
}

.b-color-sidebar{
  background-color: black ;
}
.b-color-main{
  background-color: #141922;
}
.b-color-footer{
  background-color: #282828;
}
.b-color-upgrade{
  background-color: #080b12;
}
.t-grey{
  color: #797c80;
}
.t-white{
  color:white;
}

.uppercase{
  text-transform: uppercase;
}
.v-p10{
  padding: 10px 0;
}
.v-p20{
  padding: 20px 0;
}
.v-p30{
  padding: 30px 0;
}
.v-p40{
  padding: 40px 0;
}
.v-m40{
  margin: 40px 0;
}


/******************main*******************/
/*upgrade-section*/
  .upgrade-section{
    padding: 35px 20px;
    height: 90px;
    text-align: right;
    position: sticky;
    top: 0;
    opacity:0.6 ;
    z-index: 999;
  }
/*nav-section*/
.nav-section ul{
  justify-content: center;
  flex-wrap: wrap;
  padding: 1rem;
  margin-bottom: 40px;
}
.nav-section li{
  margin: 20px 0;

}

.selected{
  position: relative;;
}
main .main-section .selected::after{
  display: block;
  content: '';
 width: 30%;
 height: 3px;
 background: #adff2f;
 position: absolute;
 bottom: 0;
 left: 50%;
 transform: translate(-50%);
 
}
/*card-section*/
.col{
  flex-basis: calc(100%/6);
  padding: 0 10px;
}
.card{
  width: 100%;
}
.card-section{
  padding: 20px
}
.box-card{
  padding: 10px 0;
}
.card{
  flex-direction: column;
  align-items: center;
}
.creato-per{
  padding: 0px 20px
}
.popular{
  padding: 0 20px
}
.popular img{
  border-radius: 50%;
}

  a.card{
    padding: 0;
  }
  a.card .card-img{
    position: relative
    
  }
  a.card:hover .card-img{
    opacity: 0.6;
    
  }
  a.card:hover .card-img::after{
    font-family: 'Font Awesome 6 Free';
    font-weight: 900;
    content: '\f144';
    position: absolute;                                 
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    color: white;
    font-size: 3rem;
  }
/******************sidebar*******************/
.sidebar .header.hide nav{
  padding: 10px 0px;
}
.sidebar .header.hide ul:last-child{
  margin-top: 10px;
}
.playlist{
  padding: 0 20px;
}

.sidebar .selected{
    border-left: 4px solid #adff2f ;
    color: white;
    opacity: 1;
}
.sidebar .main.hide nav{
  padding:10px 20px;
}
.sidebar h3{
  text-align: left;
}
.sidebar h4{
  color: white;
  display: inline-block;
}

  .sidebar .logo-section img{
  max-width: 120px;
  padding: 20px 0;
}
  .sidebar li{
  padding: 10px 0;
  color: white;
}
  .sidebar li a{
    color: white;
    padding: 10px 0px;
  }
  .item{
    opacity: 0.6;
  }
  .item:before{
    display: inline-block;
    width: 2rem;
    padding-left:0 10px;
    padding-left: 20px;
    vertical-align: middle;
  }

  .item:hover{
    opacity: 1;
  }
  .item.home:before{
    content: url(../img/home.svg);

  }
  .item.search:before{
    content: url(../img/search.svg);
  }
  .item.library:before{
    content: url(../img/libreria.svg);
  }
  .item.instal:before{
    font-family: 'Font Awesome 6 Free';
    font-weight: 900;
    content: '\f358';
    text-align: center;
    font-size: 1rem;
    padding: 0 2px;
    margin-right: 5px;
  }
  .item.profile:before{
    font-family: 'Font Awesome 6 Free';
    font-weight: 900;
    content: '\f007';
    text-align: center;
    font-size: 1rem;
    padding: 0 2px;
    margin-right: 5px;
    vertical-align: middle;
  }
  .item.plus:before{
    content: '+';
    text-align: center;
    font-size: 2rem;
    padding: 0 2px;
    margin-right: 5px;
    color: black;
    background-color: white;
  }

  .sidebar .footer.hide{
    padding: 10px;
  }
  .sidebar .footer.hide .bar{
    background-color: white;
    height: 1px;
    width: 90%;
    margin: 10px 0;
    opacity: 0.6;
  }
  .sidebar .footer.hide a{
    padding: 0px;
  }
  .footer .item-profile{
    color: white;
  }
  
  .sidebar .logo-section .small{
    max-width:50px;
    display: none;
  }
/******************footer*******************/
footer{
  justify-content: space-between;
}
footer .col{
  flex-basis: calc(100%/3);
  align-items: center;
  padding: 0 20px;
}
footer h3{
  margin: 0;
  padding:0 30px;
  font-size: 1rem;
}
footer h4{
  margin: 0;
  padding:0;
}
footer a{
  padding:0;
  
}
footer .brano img{
  width:40px;
}
footer .icon a{
  padding: 0 10px;
}
.console.row{
  justify-content: center;
}
.bar.row{
  justify-content: center;
  align-items: center;
}

/*console*/
.console.row a{
  padding:20px 10px;
  font-size: 1.5rem;
}
footer .bar-background{
  position: relative;
  width:80%;
  height: 3px;
  background-color: #5a5a5a;
  border-radius: 10px;
}
footer .bar-background .bar{
  position: absolute;
  width:20%;
  height: 3px;
  background-color: white;
  border-radius: 10px;
}
footer .bar-background:hover .bar::after{
  font-family: 'Font Awesome 6 Free';
  font-weight: 900;
  position: absolute;
  content: '\f192' ;
  color: white;
  font-size: 0.6rem;
  right: -7px;
  top:-4px;
}
footer .bar-background:hover .bar{
  background-color: #adff2f;
}
p{
  font-size: 0.7rem;
  padding: 0 10px;
  font-weight: bold;
  color: white;
}

/*volume*/

footer .settings .bar-background{
  width: 20%;
  margin: 0 10px;
}
footer .settings{
  justify-content: end;
}

/*@media*/
@media (max-width:1100px){
  .col{
    flex-basis: calc(100%/4);
  }
  .box-card.d-flex{
    flex-wrap: wrap;
  }
}
@media (max-width:700px){
  .col{
    flex-basis: calc(100%/2);
  }
}
@media (max-width:600px){
  .col{
    flex-basis: calc(100%/2);
  }
  .small{
    max-width: 40px;
    margin:  0 5px;
  }
  .show{
    display: block;
  }
  .hide{
    display: none;
  }
    .header.show a{
      padding:10px 0;
      margin: 0;
      display: block;
      font-size: 2rem;
      text-align: center;
      margin: 0 auto;
      opacity: 0.8;
    }
    .footer.show a{
      padding:10px 0;
      margin: 0;
      display: block;
      font-size: 1.5rem;
      text-align: center;
      margin: 0 auto;
      opacity: 0.8;
    }
.footer.show{
  height: 90px;
}
.header.show{
  height:calc(100% - 90px)
}
.sidebar.show{
  height: 100%;
  width:50px;
}
}

